# file-splitter

./: Cargo.toml  LICENSE  README.md  README.zh.md  index.html
src/: lib.rs  main.rs
