# Cargo.toml
[package]
name = "file_splitter"
version = "0.1.0"
edition = "2021"

[dependencies]
# Common dependencies
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
flate2 = "1.0"

# CLI specific dependency (默认包含，用于命令行版本)
indicatif = { version = "0.17", optional = true }

# GUI specific dependencies (仅在启用 'gui' 功能时编译)
eframe = { version = "0.28", optional = true }
egui = { version = "0.28", optional = true }
rfd = { version = "0.14", optional = true } # Native file dialogs

[features]
# 默认功能，在没有指定其他功能时启用。
# 这会拉取 indicatif 依赖，用于构建命令行界面。
default = ["indicatif"] 

# GUI 功能。当此功能被启用时，会拉取 GUI 相关的依赖。
# main.rs 中的条件编译会确保只有在 Windows 且此功能被启用时才运行 GUI 代码。
gui = ["eframe", "egui", "rfd"]
